feat: Adding creation of the confirm advert, which is called when the file is saved in AWS S3

--- a/AdvertApi/AdvertApi.csproj
+++ b/AdvertApi/AdvertApi.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.3.104.15" />
   </ItemGroup>
 
